--- a/pug/blocks/card.pug
+++ b/pug/blocks/card.pug
@@ -1,6 +1,6 @@
 mixin card(pepper)
   // card
-  .card
+  .card.modal-trigger(data-modal="#modalProduct")
     .card__img 
       img(src="img/food.png", alt="")
       if pepper
