--- a/scss/style.scss
+++ b/scss/style.scss
@@ -94,6 +94,7 @@ $gray: #E9E9E9;
 @import 'blocks/reccomend';
 @import 'blocks/fillorder';
 @import 'blocks/modal';
+@import 'blocks/product';
 // @import 'blocks/menu';
 // @import 'blocks/accordion';
 // @import 'blocks/modal';
