--- a/scss/blocks/fillorder.scss
+++ b/scss/blocks/fillorder.scss
@@ -71,6 +71,8 @@
     background-color: $gray;
     position: relative;
     transition: 0.3s;
+    cursor: pointer;
+    user-select: none;
     &.is-active {
       box-shadow: inset -1px -1px 3px rgba(255, 255, 255, 0.8), inset -6px -6px 5px rgba(255, 255, 255, 0.3), inset 1px 1px 3px rgba(0, 0, 0, 0.15), inset 6px 6px 5px rgba(0, 0, 0, 0.06);
       z-index: 3;
@@ -225,10 +227,122 @@
   &__close {
     display: none;
   }
+  &__dark-blocks {
+    padding: 20px 0;
+  }
   &__dark-block {
     padding: 20px 17px;
     background: rgba(0, 0, 0, 0.25);
     border-radius: 30px 30px 30px 3px;
+    color: #fff;
+    margin-bottom: 10px;
+    &--slider {
+      display: none;
+      position: relative;
+      &:after {
+        content: '';
+        display: block;
+        height: 1px;
+        background: rgba(217, 217, 217, 0.08);
+        position: absolute;
+        top: 55px;
+        left: 0;
+        right: 0;
+      }
+      &:before {
+        content: '';
+        display: block;
+        height: 200px;
+        background: linear-gradient(to bottom, transparent, #212629 90%);
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        z-index: 2;
+        pointer-events: none;
+      }
+      &.visible {
+        display: block;
+      }
+    }
+    &--nopadding {
+      padding: 0;
+    }
+  }
+  &__dark-block-input {
+    position: absolute;
+    visibility: hidden;
+    &:checked {
+      ~ .fillorder__dark-block-label {
+        .fillorder__dark-block-radio {
+          background-color: $orange;
+          border-color: $orange;
+          &:after {
+            opacity: 1;
+          }
+        }
+      }
+    }
+  }
+  &__dark-block-label {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 17px;
+    font-weight: 300;
+    font-size: 18px;
+    line-height: 20px;
+    cursor: pointer;
+    user-select: none;
+  }
+  &__dark-block-text {
+    
+  }
+  &__dark-block-radio {
+    width: 26px;
+    height: 26px;
+    border: 1px solid rgba(255, 255, 255, 0.15);
+    border-radius: 100%;
+    position: relative;
+    &:after {
+      content: '';
+      display: block;
+      width: 13px;
+      height: 12px;
+      background-image: url("data:image/svg+xml,%3Csvg width='13' height='12' viewBox='0 0 13 12' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M2 7L5 10L11 2' stroke='%23212629' stroke-width='3' stroke-miterlimit='10' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
+      background-size: contain;
+      background-repeat: no-repeat;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%,-50%);
+      opacity: 0;
+    }
+  }
+  &__sliders {
+    display: flex;
+    justify-content: space-between;
+    height: 180px;
+    overflow: hidden;
+  }
+  &__slider {
+    width: 110px;
+    cursor: pointer;
+    user-select: none;
+    .swiper-slide {
+      display: flex;
+      align-items: center;
+    }
+    .swiper-slide-active {
+      .fillorder__slide-item {
+        font-weight: bold;
+      }
+    }
+  }
+  &__slide-item {
+    font-weight: 300;
+    font-size: 18px;
+    line-height: 20px;
   }
   @media (min-width: $break_sm + 1) {
     &__triggers {
@@ -244,7 +358,7 @@
         visibility: hidden;
       }
     }
-    &__item {
+    &__item-container {
       &:hover:not(.is-active) {
         .fillorder__item-container {
           box-shadow: 0 0 10px rgb(0 0 0 / 20%);
