--- a/pug/blocks/card.pug
+++ b/pug/blocks/card.pug
@@ -2,7 +2,7 @@ mixin card(pepper)
   // card
   .card.modal-trigger(data-modal="#modalProduct")
     .card__img 
-      img(src="img/food.png", alt="")
+      img(src="img/food.webp", alt="")
       if pepper
         .card__pepper 
           img(src="img/pepper.svg", alt="")
