--- a/pug/cancelled-order.pug
+++ b/pug/cancelled-order.pug
@@ -30,7 +30,7 @@ block content
           //	/backtitle
 
           .order__status-title 
-            img(src="img/cancelled.png", alt="")
+            img(src="img/cancelled.webp", alt="")
             span 8 апреля 2054
 
           .order__whatsapp-mobile 
@@ -41,7 +41,7 @@ block content
               .order__food 
                 .order__food-left
                   a(href="#").order__food-img.order__food-img--orange
-                    img(src="img/food.png", alt="")
+                    img(src="img/food.webp", alt="")
                   .order__food-title 
                     a(href="#") Картофель с луком и белыми грибами
                     ul.order__food-list.tablet-visible
@@ -55,7 +55,7 @@ block content
               .order__food 
                 .order__food-left
                   a(href="#").order__food-img.order__food-img--blue
-                    img(src="img/food.png", alt="")
+                    img(src="img/food.webp", alt="")
                   .order__food-title 
                     a(href="#") Тар-тар из лососся на авокадо
                     ul.order__food-list.tablet-visible
