--- a/pug/cart.pug
+++ b/pug/cart.pug
@@ -33,7 +33,7 @@ block content
             .cart__item 
               .cart__left
                 a(href="#").cart__img 
-                  img(src="img/food.png", alt="")
+                  img(src="img/food.webp", alt="")
                 .cart__content
                   .cart__title 
                     a(href="#") Картофель с луком и белыми грибами
@@ -54,7 +54,7 @@ block content
             .cart__item 
               .cart__left
                 a(href="#").cart__img 
-                  img(src="img/food.png", alt="")
+                  img(src="img/food.webp", alt="")
                 .cart__content
                   .cart__title 
                     a(href="#") Тар-тар из лососся на авокадо
@@ -108,70 +108,70 @@ block content
                 .swiper-slide 
                   a(href="#").reccomend__item
                     .reccomend__img.reccomend__img--orange 
-                      img(src="img/food.png", alt="")
+                      img(src="img/food.webp", alt="")
                     .reccomend__content 
                       .reccomend__subtitle Картофель с луком и белыми грибами
                       .reccomend__text 860₽
                 .swiper-slide 
                   a(href="#").reccomend__item
                     .reccomend__img.reccomend__img--blue 
-                      img(src="img/food.png", alt="")
+                      img(src="img/food.webp", alt="")
                     .reccomend__content 
                       .reccomend__subtitle Картофель с луком и белыми грибами
                       .reccomend__text 860₽
                 .swiper-slide 
                   a(href="#").reccomend__item
                     .reccomend__img.reccomend__img--orange 
-                      img(src="img/food.png", alt="")
+                      img(src="img/food.webp", alt="")
                     .reccomend__content 
                       .reccomend__subtitle Картофель с луком и белыми грибами
                       .reccomend__text 860₽
                 .swiper-slide 
                   a(href="#").reccomend__item
                     .reccomend__img.reccomend__img--blue 
-                      img(src="img/food.png", alt="")
+                      img(src="img/food.webp", alt="")
                     .reccomend__content 
                       .reccomend__subtitle Картофель с луком и белыми грибами
                       .reccomend__text 860₽
                 .swiper-slide 
                   a(href="#").reccomend__item
                     .reccomend__img.reccomend__img--orange 
-                      img(src="img/food.png", alt="")
+                      img(src="img/food.webp", alt="")
                     .reccomend__content 
                       .reccomend__subtitle Картофель с луком и белыми грибами
                       .reccomend__text 860₽
                 .swiper-slide 
                   a(href="#").reccomend__item
                     .reccomend__img.reccomend__img--blue 
-                      img(src="img/food.png", alt="")
+                      img(src="img/food.webp", alt="")
                     .reccomend__content 
                       .reccomend__subtitle Картофель с луком и белыми грибами
                       .reccomend__text 860₽
                 .swiper-slide 
                   a(href="#").reccomend__item
                     .reccomend__img.reccomend__img--orange 
-                      img(src="img/food.png", alt="")
+                      img(src="img/food.webp", alt="")
                     .reccomend__content 
                       .reccomend__subtitle Картофель с луком и белыми грибами
                       .reccomend__text 860₽
                 .swiper-slide 
                   a(href="#").reccomend__item
                     .reccomend__img.reccomend__img--blue 
-                      img(src="img/food.png", alt="")
+                      img(src="img/food.webp", alt="")
                     .reccomend__content 
                       .reccomend__subtitle Картофель с луком и белыми грибами
                       .reccomend__text 860₽
                 .swiper-slide 
                   a(href="#").reccomend__item
                     .reccomend__img.reccomend__img--orange 
-                      img(src="img/food.png", alt="")
+                      img(src="img/food.webp", alt="")
                     .reccomend__content 
                       .reccomend__subtitle Картофель с луком и белыми грибами
                       .reccomend__text 860₽
                 .swiper-slide 
                   a(href="#").reccomend__item
                     .reccomend__img.reccomend__img--blue 
-                      img(src="img/food.png", alt="")
+                      img(src="img/food.webp", alt="")
                     .reccomend__content 
                       .reccomend__subtitle Картофель с луком и белыми грибами
                       .reccomend__text 860₽
