--- a/pug/current-order.pug
+++ b/pug/current-order.pug
@@ -59,7 +59,7 @@ block content
               .order__food 
                 .order__food-left
                   a(href="#").order__food-img.order__food-img--orange
-                    img(src="img/food.png", alt="")
+                    img(src="img/food.webp", alt="")
                   .order__food-title 
                     a(href="#") Картофель с луком и белыми грибами
                     ul.order__food-list.tablet-visible
@@ -73,7 +73,7 @@ block content
               .order__food 
                 .order__food-left
                   a(href="#").order__food-img.order__food-img--blue
-                    img(src="img/food.png", alt="")
+                    img(src="img/food.webp", alt="")
                   .order__food-title 
                     a(href="#") Тар-тар из лососся на авокадо
                     ul.order__food-list.tablet-visible
