--- a/pug/order.pug
+++ b/pug/order.pug
@@ -130,13 +130,13 @@ block content
                       .fillorder__dark-block.fillorder__dark-block--nopadding
                         input#timeNow(type="radio" name="time" checked).fillorder__dark-block-input
                         label(for="timeNow").fillorder__dark-block-label
-                          .fillorder__dark-block-text Как сожно скорее
-                          .fillorder__dark-block-radio
+                          span.fillorder__dark-block-text Как сожно скорее
+                          span.fillorder__dark-block-radio
                       .fillorder__dark-block.fillorder__dark-block--nopadding
                         input#timeAfter(type="radio" name="time").fillorder__dark-block-input
                         label(for="timeAfter").fillorder__dark-block-label
-                          .fillorder__dark-block-text Попозже
-                          .fillorder__dark-block-radio
+                          span.fillorder__dark-block-text Попозже
+                          span.fillorder__dark-block-radio
                     .fillorder__dark-block.fillorder__dark-block--slider
                       .fillorder__sliders 
                         .fillorder__slider#sliderDate
