--- a/pug/modals.pug
+++ b/pug/modals.pug
@@ -352,21 +352,21 @@ block content
           .product__item 
             input#option_0(type="radio" name="option").product__input 
             label(for="option_0").product__label 
-              div Побольше лука
-              div + 20&#8381;
-                .product__radio 
+              span Побольше лука
+              span + 20&#8381;
+                span.product__radio 
           .product__item 
             input#option_1(type="radio" name="option").product__input 
             label(for="option_1").product__label 
-              div По домашнему
-              div 0&#8381;
-                .product__radio 
+              span По домашнему
+              span 0&#8381;
+                span.product__radio 
           .product__item 
             input#option_2(type="radio" name="option").product__input 
             label(for="option_2").product__label 
-              div Грибов побольше
-              div + 300&#8381;
-                .product__radio 
+              span Грибов побольше
+              span + 300&#8381;
+                span.product__radio 
           .product__bottom 
             .product__counter 
               .js-counter.card__counter 
