--- a/pug/home.pug
+++ b/pug/home.pug
@@ -259,19 +259,19 @@ block content
           .product__text Это вкусное и сытное блюдо является любимым блюдом во многих семьях, полюбите его и вы.
           .product__subtitle Дополнительно:
           .product__item 
-            input#option_0(type="radio" name="option").product__input 
+            input#option_0(type="checkbox" name="option").product__input 
             label(for="option_0").product__label 
               span Побольше лука
               span + 20&#8381;
                 span.product__radio 
           .product__item 
-            input#option_1(type="radio" name="option").product__input 
+            input#option_1(type="checkbox" name="option").product__input 
             label(for="option_1").product__label 
               span По домашнему
               span 0&#8381;
                 span.product__radio 
           .product__item 
-            input#option_2(type="radio" name="option").product__input 
+            input#option_2(type="checkbox" name="option").product__input 
             label(for="option_2").product__label 
               span Грибов побольше
               span + 300&#8381;
