--- a/css/style.css
+++ b/css/style.css
@@ -2724,6 +2724,7 @@ svg {
   font-weight: 300;
   font-size: 17px;
   line-height: 20px;
+  color: #212629;
   border: none;
   outline: none;
   cursor: pointer;
@@ -2785,7 +2786,7 @@ svg {
     width: 50%;
   }
   .bankcard__btn {
-    margin-top: 40px;
+    margin-top: 5px;
   }
   .bankcard__btn .btn {
     max-width: none;
@@ -3257,6 +3258,9 @@ svg {
   color: rgba(33, 38, 41, 0.5);
 }
 @media (max-width: 500px) {
+  .reccomend:after {
+    display: none;
+  }
   .reccomend__title {
     font-size: 18px;
     line-height: 20px;
@@ -3979,13 +3983,29 @@ svg {
 /* product */
 .product__body {
   padding: 20px;
+  overflow: visible;
 }
 .product__content {
   max-width: 770px;
-  height: auto;
+  height: 100%;
+  min-height: 0;
   border-radius: 40px 40px 40px 5px;
+  overflow: hidden;
   padding: 0;
   background: transparent;
+}
+.product__container {
+  height: 100%;
+  border-radius: 40px 40px 40px 5px;
+  overflow-y: auto;
+  overflow: auto;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+  position: relative;
+}
+.product__container::-webkit-scrollbar {
+  width: 0;
+  height: 0;
 }
 .product__img {
   display: -webkit-box;
@@ -4003,7 +4023,7 @@ svg {
   position: relative;
 }
 .product__word {
-  padding: 60px;
+  padding: 60px 60px 100px;
   border-radius: 0 0 40px 5px;
   background-color: #212629;
   color: #fff;
@@ -4126,9 +4146,16 @@ svg {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-top: 40px;
+  width: 100%;
+  padding: 20px 60px;
+  background-color: #212629;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
 .product__counter .card__counter {
+  background-color: #212629;
   border: 1px solid rgba(255, 255, 255, 0.08);
 }
 .product__counter .card__counter-minus svg {
@@ -4209,7 +4236,7 @@ svg {
 }
 @media (max-width: 500px) {
   .product__word {
-    padding: 20px;
+    padding: 20px 20px 100px;
   }
   .product__title {
     font-size: 20px;
@@ -4231,6 +4258,9 @@ svg {
   }
   .product__pepper {
     left: 20px;
+  }
+  .product__bottom {
+    padding: 20px;
   }
 }
 @media (max-width: 370px) {
