--- a/pug/home.pug
+++ b/pug/home.pug
@@ -242,40 +242,41 @@ block content
   .js-modal.modal.product#modalProduct
     .modal_body.product__body
       form(action="#").modal_content.product__content
-        .product__img 
-          img(src="img/food.webp", alt="")
-          .product__pepper 
-            img(src="img/pepper.svg", alt="")
-          .product__favourite 
-            svg(width="20" height="18" viewBox="0 0 20 18" fill="none" xmlns="http://www.w3.org/2000/svg")
-              path(d="M5.5 0.237305C2.5 0.237305 0 2.7373 0 5.7373C0 7.7373 1.5 9.7373 3.4 11.7373C5.3 13.7373 7.6 15.7373 9.4 17.5373C9.7 17.8373 10.2 17.8373 10.5 17.5373C12.3 15.7373 14.7 13.7373 16.5 11.7373C18.3 9.7373 19.9 7.8373 19.9 5.7373C19.9 2.7373 17.4 0.237305 14.4 0.237305C12.7 0.237305 11.1 1.1373 9.9 2.7373C8.8 1.1373 7.2 0.237305 5.5 0.237305ZM5.5 1.7373C7 1.7373 8.2 2.5373 9.4 4.4373C9.6 4.8373 10.1 4.9373 10.4 4.6373C10.5 4.5373 10.6 4.5373 10.6 4.4373C11.8 2.5373 13 1.7373 14.5 1.7373C16.7 1.7373 18.5 3.5373 18.5 5.7373C18.5 6.9373 17.3 8.7373 15.5 10.6373C13.9 12.3373 11.8 14.1373 10 15.9373C8.2 14.1373 6.2 12.3373 4.5 10.6373C2.7 8.7373 1.5 6.9373 1.5 5.7373C1.5 3.5373 3.3 1.7373 5.5 1.7373Z" fill="white")
-        .product__word
-          .product__title Картофель с луком и белыми грибами
-          ul.product__list 
-            li 320 г
-            li 1 040 ккал
-            li 
-              span 430&#8381;
-          .product__text Это вкусное и сытное блюдо является любимым блюдом во многих семьях, полюбите его и вы.
-          .product__subtitle Дополнительно:
-          .product__item 
-            input#option_0(type="checkbox" name="option").product__input 
-            label(for="option_0").product__label 
-              span Побольше лука
-              span + 20&#8381;
-                span.product__radio 
-          .product__item 
-            input#option_1(type="checkbox" name="option").product__input 
-            label(for="option_1").product__label 
-              span По домашнему
-              span 0&#8381;
-                span.product__radio 
-          .product__item 
-            input#option_2(type="checkbox" name="option").product__input 
-            label(for="option_2").product__label 
-              span Грибов побольше
-              span + 300&#8381;
-                span.product__radio 
+        .product__container
+          .product__img 
+            img(src="img/food.webp", alt="")
+            .product__pepper 
+              img(src="img/pepper.svg", alt="")
+            .product__favourite 
+              svg(width="20" height="18" viewBox="0 0 20 18" fill="none" xmlns="http://www.w3.org/2000/svg")
+                path(d="M5.5 0.237305C2.5 0.237305 0 2.7373 0 5.7373C0 7.7373 1.5 9.7373 3.4 11.7373C5.3 13.7373 7.6 15.7373 9.4 17.5373C9.7 17.8373 10.2 17.8373 10.5 17.5373C12.3 15.7373 14.7 13.7373 16.5 11.7373C18.3 9.7373 19.9 7.8373 19.9 5.7373C19.9 2.7373 17.4 0.237305 14.4 0.237305C12.7 0.237305 11.1 1.1373 9.9 2.7373C8.8 1.1373 7.2 0.237305 5.5 0.237305ZM5.5 1.7373C7 1.7373 8.2 2.5373 9.4 4.4373C9.6 4.8373 10.1 4.9373 10.4 4.6373C10.5 4.5373 10.6 4.5373 10.6 4.4373C11.8 2.5373 13 1.7373 14.5 1.7373C16.7 1.7373 18.5 3.5373 18.5 5.7373C18.5 6.9373 17.3 8.7373 15.5 10.6373C13.9 12.3373 11.8 14.1373 10 15.9373C8.2 14.1373 6.2 12.3373 4.5 10.6373C2.7 8.7373 1.5 6.9373 1.5 5.7373C1.5 3.5373 3.3 1.7373 5.5 1.7373Z" fill="white")
+          .product__word
+            .product__title Картофель с луком и белыми грибами
+            ul.product__list 
+              li 320 г
+              li 1 040 ккал
+              li 
+                span 430&#8381;
+            .product__text Это вкусное и сытное блюдо является любимым блюдом во многих семьях, полюбите его и вы.
+            .product__subtitle Дополнительно:
+            .product__item 
+              input#option_0(type="checkbox" name="option").product__input 
+              label(for="option_0").product__label 
+                span Побольше лука
+                span + 20&#8381;
+                  span.product__radio 
+            .product__item 
+              input#option_1(type="checkbox" name="option").product__input 
+              label(for="option_1").product__label 
+                span По домашнему
+                span 0&#8381;
+                  span.product__radio 
+            .product__item 
+              input#option_2(type="checkbox" name="option").product__input 
+              label(for="option_2").product__label 
+                span Грибов побольше
+                span + 300&#8381;
+                  span.product__radio 
           .product__bottom 
             .product__counter 
               .js-counter.card__counter 
@@ -290,5 +291,5 @@ block content
                     path(d="M7.7998 0.7V13.2C7.7998 13.7 7.3998 14 6.9998 14C6.5998 14 6.2998 13.7 6.2998 13.3V0.7C6.2998 0.3 6.5998 0 6.9998 0C7.3998 0 7.7998 0.3 7.7998 0.7Z")
             button(type="submit").btn.product__btn Добавить 
               span 430&#8381;
-        .product__close.modal_close.js-modal-close
+          .product__close.modal_close.js-modal-close
   //	/product 
