--- a/scss/blocks/bankcard.scss
+++ b/scss/blocks/bankcard.scss
@@ -56,6 +56,7 @@
     font-weight: 300;
     font-size: 17px;
     line-height: 20px;
+    color: $text;
     border: none;
     outline: none;
     cursor: pointer;
@@ -107,7 +108,7 @@
       }
     }
     &__btn {
-      margin-top: 40px;
+      margin-top: 5px;
       .btn {
         max-width: none;
       }
