--- a/scss/blocks/reccomend.scss
+++ b/scss/blocks/reccomend.scss
@@ -77,6 +77,9 @@
     color: rgba(33, 38, 41, 0.5);
   }
   @media (max-width: $break_xs) {
+    &:after {
+      display: none;
+    }
     &__title {
       font-size: 18px;
       line-height: 20px;
