--- a/pug/order.pug
+++ b/pug/order.pug
@@ -207,6 +207,7 @@ block content
                               .fillorder__slide-item 13:00 - 13:30
                             .swiper-slide 
                               .fillorder__slide-item 13:30 - 14:00
+                      .fillorder__choose.btn.js-drop-close(data-drop="timeDrop") Выбрать
 
               .fillorder__comment 
                 .fillorder__textarea.js-textarea
