--- a/pug/addresses.pug
+++ b/pug/addresses.pug
@@ -45,7 +45,7 @@ block content
                     p Для охраны 62
 
           .addresses__btn 
-            .btn.btn--black Добавить карту
+            .btn.btn--black Добавить адрес
           
       //	/addresses
 
