--- a/pug/home.pug
+++ b/pug/home.pug
@@ -236,6 +236,9 @@ block content
               +card('pepper')
       //	/catalog
 
+      .floating-cart
+        .btn.btn--white Заказать 1 блюдо за 430₽
+
     include core/footer.pug
 
   // product 
