--- a/scss/blocks/settings.scss
+++ b/scss/blocks/settings.scss
@@ -134,9 +134,33 @@ svg {
     bottom: 20px;
     left: 30px;
     right: 30px;
+    z-index: 10;
     .btn {
       width: 100%;
     }
+  }
+}
+.floating-cart {
+  display: none;
+  @media (max-width: $break_sm) {
+    display: block;
+    width: 100%;
+    max-width: 340px;
+    position: fixed;
+    bottom: 20px;
+    left: 50%;
+    transform: translate(-50%,0);
+    z-index: 10;
+    .btn {
+      width: 100%;
+    }
+  }
+  @media (max-width: $break_xs) {
+    left: 30px;
+    right: 30px;
+    width: auto;
+    max-width: none;
+    transform: translate(0,0);
   }
 }
 .modals {
