--- a/scss/blocks/product.scss
+++ b/scss/blocks/product.scss
@@ -7,6 +7,7 @@
   &__content {
     display: block;
     max-width: 770px;
+    min-height: 0;
     border-radius: 40px 40px 40px 5px;
     padding: 0;
     background: transparent;
