--- a/css/style.css
+++ b/css/style.css
@@ -4033,6 +4033,12 @@ svg {
 
 /* product */
 .product__body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
   padding: 20px;
   overflow: visible;
 }
