--- a/scss/blocks/product.scss
+++ b/scss/blocks/product.scss
@@ -1,6 +1,8 @@
 /* product */
 .product { 
   &__body {
+    display: flex;
+    align-items: center;
     padding: 20px;
     overflow: visible;
   }
